# x_evaluate

./: CMakeLists.txt  README.md  dependencies.yaml  package.xml  params.yaml  params_eklt_samples.yaml  params_esim.yaml  params_esim_davis.yaml  params_esim_davis346.yaml  params_esim_xplorer.yaml  params_mars_yard.yaml  params_rpg_davis.yaml  params_rpg_davis_rotation.yaml  params_rpg_fpv.yaml  params_wells.yaml  params_wells_gt.yaml  requirements.txt  setup.py
scripts/: analyze_rt_factor_with_event_rate.py  analyze_tracks_angles.py  compare.py  compare_update_strategy.py  compare_uslam.py  convert_tracks_csv_to_txt.py  customize_rpe_error_arrays.py  estimate_q0_from_imu_a.py  evaluate_uslam.py  extract_initial_state_from_bag.py  neurobem_to_esim_trajectory.py  parameter_exploration.sh  plot_event_rate_from_bag.py  plot_gt_dynamic_comparison_from_bags.py  plot_performance_pie_charts.py  plot_summaries.py  qualitative_evaluation.py  rename.py  search_best_tables.py  search_evaluations.py  showcase_mars_environment.py  visualize_esim_imu.py  visualize_esim_spline_derivatives.py  visualize_feature_tracks.py  visualize_feature_tracks_3d.py  visualize_frame_output.py  visualize_trajectories.py  visualize_trajectory_animation.py
src/x_evaluate/: comparisons.py  conversions.py  evaluation_data.py  math_utils.py  performance_evaluation.py  plots.py  rpg_trajectory_evaluation.py  scriptlets.py  tracking_evaluation.py  trajectory_evaluation.py  utils.py
src/x_evaluate/rpg_tracking_analysis/: bag2dataframe.py  compare_tracks.py  dataset.py  evaluate_tracks.py  plot_track.py  plot_tracks.py  tracker.py  tracker_init.py  tracker_utils.py  tracks.py  visualizer.py
src/x_evaluate/rpg_trajectory_evaluation/: trajectory_evaluation.py
src/x_evaluate/visualizer/: dataset_player.py  renderer.py  utils.py
test/: compare.py  evaluate.cpp  evaluate.py  evaluate.yaml  evaluate_mars_yard.yaml  evaluate_poster_6dof_speedup.yaml  evaluate_rpg_davis_rotation.yaml  evaluate_rpg_fpv.yaml  evaluate_sim.yaml  evaluate_sim_ral.yaml  evaluate_wells.yaml  evaluate_wells_dop.yaml  evaluate_wells_gt.yaml  utest.cpp
