<package format="2">
  <name>x_evaluate</name>
  <version>1.0.0</version>
  <description>Perfromance evaluation toolbox for Visual-Inertial Odometry with the X framework (xVIO).</description>
  <maintainer email="florian.mahlknecht@jpl.nasa.gov">Florian Mahlknecht</maintainer>
  
  <license>California Institute of Technology</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <depend>x</depend>
  <depend>cv_bridge</depend>
  <depend>dvs_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>gflags_catkin</depend>
  <depend>easy_profiler_catkin</depend>

  <depend>glog_catkin</depend>
</package>
